tests/NormalTests/paczka1/fuzzy1/65189163.err
Error in line 6: txwbrwg A221 71,7
Error in line 4: txwb3rwg A221 40,6
Error in line 8: txwb3rwg S130 74,2
Error in line 10: gm1mR A904 79,1
Error in line 25: gm1mR S130 65,1
Error in line 28: A904 A221 25,3
Error in line 32: gm1mR A904 37,8
Error in line 37: 49Oli52 A281 17,4
